# GibdetColombiaChapter_UrbanTreeObservatory

./: .gitattributes  .pre-commit-config.yaml  README.md  codecov.yml  compose.yaml
backend/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/biodiversity/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/biodiversity/migrations/: 0001_initial.py  0002_alter_biodiversityrecord_common_name.py  0002_remove_biodiversityrecord_common_names.py  0002_remove_biodiversityrecord_common_names_and_more.py  0003_biodiversityrecord_neighborhood.py  0003_biodiversityrecord_original_code.py  0004_alter_biodiversityrecord_site.py  0005_biodiversityrecord_system_comment.py
backend/apps/biodiversity/tests/: test_api.py  test_models.py
backend/apps/climate/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/climate/migrations/: 0001_initial.py
backend/apps/climate/tests/: test_api.py  test_models.py
backend/apps/core/: README.md  factories.py  models.py
backend/apps/core/tests/: test_mappings.py
backend/apps/core/utils/: mappings.py
backend/apps/observations/: apps.py  models.py
backend/apps/observations/migrations/: 0001_initial.py
backend/apps/places/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/places/migrations/: 0001_initial.py  0002_create_initial_places.py  0003_country_boundary_department_boundary_and_more.py  0004_alter_country_options_alter_department_options_and_more.py  0005_locality.py  0006_neighborhood.py  0007_place_locality.py  0008_alter_place_options_remove_place_unique_place_and_more.py  0008_alter_site_options_remove_site_unique_place_and_more.py  0009_alter_place_options_remove_place_unique_place_and_more.py  0009_remove_site_populated_center.py  0010_rename_place_site.py  (+4 more)
backend/apps/reports/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/taxonomy/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/trees/: models.py  serializers.py  views.py
backend/apps/users/: apps.py  factories.py  models.py
backend/config/: api_urls.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/static/css/: custom_leaflet_admin.css
backend/static/js/: custom_leaflet_admin.js
backend/templates/admin/: base_site.html
(+126 files in other folders)
